--- a/src/app/core/layout/footer.component.html
+++ b/src/app/core/layout/footer.component.html
@@ -5,7 +5,7 @@
       &copy; {{ today | date: "yyyy" }}. An interactive learning project from
       <a href="https://github.com/gothinkster/realworld"
         >RealWorld OSS Project</a
-      >. Code licensed under MIT.
+      >. Code licensed under MIT by Harish example.
     </span>
   </div>
 </footer>
